Set test for comments counter and finished up styling

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "If you are not familiar with linters, read [root level README](../README.md).",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
     "build": "webpack"
@@ -21,13 +21,20 @@
   },
   "homepage": "https://github.com/masangana/capstone-project#readme",
   "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "babel-loader": "^8.2.5",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
+    "babel-preset-env": "^1.7.0",
     "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.26.0",
     "hint": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.1",
     "mini-css-extract-plugin": "^2.6.1",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
@@ -41,6 +48,7 @@
     "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
+    "babel": "^6.23.0",
     "lodash": "^4.17.21"
   },
   "main": "webpack.config.js"
